some menus in UV/Image editor hare partially translatable #45003

Closed
opened 2015-06-09 10:40:10 +02:00 by blend-it · 4 comments
Member

system information
NA

blender version
broken: (2.74.5 148ed4e)
worked: (2.74)

short description of error
Two little low-priority miss in translation:

  1. combobox set slot-renderlayer-pass in image editor's header are partially untranslated/untranslatable: by default they show untranslated strings (for "pass" combo, this is a regression vs 2.74), but opening the dropdowns, strings are translated. issue is visible in img. imgviewer.PNG

  2. new "drop picker" show a tooltip with the string "Object: " where "Object" are untranslatable (an "Object:" string is present in POT file, but not seem related to this new feature, perhaps a "Object: %s" is needed?) drop.png

exact steps for others to reproduce the error
for 1), open image editor. For 2), use new selection picker

**system information** NA **blender version** broken: (2.74.5 148ed4e) worked: (2.74) **short description of error** Two little low-priority miss in translation: 1) combobox set *slot-renderlayer-pass* in image editor's header are partially untranslated/untranslatable: by default they show untranslated strings (for "*pass*" combo, this is a regression vs 2.74), but opening the dropdowns, strings are translated. issue is visible in img. ![imgviewer.PNG](https://archive.blender.org/developer/F188094/imgviewer.PNG) 2) new "drop picker" show a tooltip with the string "*Object: <something>*" where "*Object*" are untranslatable (an "Object:" string is present in POT file, but not seem related to this new feature, perhaps a "Object: %s" is needed?) ![drop.png](https://archive.blender.org/developer/F188100/drop.png) **exact steps for others to reproduce the error** for 1), open image editor. For 2), use new selection picker
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @blend-it

Added subscriber: @blend-it
Bastien Montagne was assigned by Campbell Barton 2015-06-09 11:25:48 +02:00

This issue was referenced by 3092e1031d

This issue was referenced by 3092e1031d2194e9d6fcc8f157a6e0fcb5d1e45a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45003
No description provided.